--- a/src/Components/AddPet/AddPet.css
+++ b/src/Components/AddPet/AddPet.css
@@ -1,6 +1,6 @@
 table{
     width: 75%;
-    background-color: #272727;
+    background-color: #95a5a6;;
     border-radius: 8px;
     border-collapse: collapse;
     margin-left: auto;
@@ -8,7 +8,7 @@ table{
 }
 
 .tHead{
-font-family: 'Oswald', sans-serif;
+font-family: 'Crete Round', serif;
 font-size: 20px;
 }
 
@@ -37,6 +37,6 @@ td{
 }
 
 tr:nth-child(even) {
-    background-color: #424242;
+    background-color: #4d4d4d;
     border-radius: 8px;
 }
