--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,6 +1,6 @@
 .MainHead{
-    height: 75px;
-    background-color: #41A1BF;
+    height: 70px;
+    background-color: #0B486B;
     width:100%;
     margin-bottom: 20px;
 }
@@ -20,6 +20,7 @@ h2 {
     font-size: 25px;
     margin-top: auto;
     margin-bottom: auto;
+    color: white;
 }
 
 h3 {
@@ -28,6 +29,7 @@ h3 {
     font-size: 30px;
     margin-top: auto;
     margin-bottom: auto;
+    color: #0B486B;
 }
 
 label {
@@ -35,12 +37,13 @@ label {
     font-size: 15px;
     margin-top: auto;
     margin-bottom: auto;
+    color: #0B486B;
 }
 
 input {
     padding: 12px 5px;
     margin-bottom: 8px;
-    border: 1px solid rgb(119, 119, 119);
+    border: 1px solid #95a5a6;;
     border-radius: 4px;
     box-sizing: border-box;
     height:10px;
@@ -68,13 +71,19 @@ input {
 
 .PetOwner{
     display: inline-block;
-    background-color: #f0f0f0;
+    background-color: #95a5a6;
     height:35px;
     width: 200px;
     margin-left:5px;
     margin-right: 3px;
     border: .1px solid #afafaf;
     border-radius: 4px;
+    box-shadow: 0 2.5px 2px 0 rgba(0, 0, 0, 0.2);
+}
+
+.PetOwner:hover {
+    background-color: #16a085;
+    box-shadow: none;
 }
 
 .forms {
@@ -92,12 +101,17 @@ input {
     height: 30px;
     width: 130px;
     color: #ffffff;
-    background-color: #41A1BF;
+    background-color: #0B486B;
     margin-left: auto;
     margin-right: auto;
     border-radius: 8px;
     border: 0px;
     font-family: 'Fjalla One', sans-serif;
     font-size: 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2.5px 2px 0 rgba(0, 0, 0, 0.2);
 }
+
+.mainButton:hover {
+    background-color: #16a085;
+    box-shadow: none;
+  }
