--- a/src/Components/AddPet/AddPet.css
+++ b/src/Components/AddPet/AddPet.css
@@ -8,13 +8,14 @@ table{
 }
 
 .tHead{
-font-family: 'Crete Round', serif;
-font-size: 20px;
+    font-family: 'Crete Round', serif;
+    font-size: 20px;
+    background-color: #0B486B;
 }
 
 .tData {
-font-family: 'Arvo', serif;
-color:white;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    color:white;
 }
 
 thead{
@@ -28,8 +29,8 @@ table, th, td {
   }
 
 td, th{
-  padding: 10px;
-  align-content: center;
+padding: 10px;
+    align-content: center;
 }
 
 td{
