--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,7 +2,9 @@
     height: 70px;
     background-color: #0B486B;
     width:100%;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 h1 {
@@ -24,16 +26,16 @@ h2 {
 }
 
 h3 {
-    font-family: 'Crete Round', serif;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
     margin-top: auto;
     margin-bottom: auto;
     color: #0B486B;
 }
 
 label {
-    font-family: 'Crete Round', serif;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 15px;
     margin-top: auto;
     margin-bottom: auto;
@@ -44,7 +46,7 @@ input {
     padding: 12px 5px;
     margin-bottom: 8px;
     border: 1px solid #95a5a6;;
-    border-radius: 4px;
+    border-radius: 12px;
     box-sizing: border-box;
     height:10px;
     width: 130px;
@@ -58,8 +60,7 @@ input {
     margin-bottom: 8px;
     display: inline-block;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    border-radius: 12px;
 }
 
 .OwnerPet{
@@ -77,12 +78,12 @@ input {
     margin-left:5px;
     margin-right: 3px;
     border: .1px solid #afafaf;
-    border-radius: 4px;
+    border-radius: 20px;
     box-shadow: 0 2.5px 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .PetOwner:hover {
-    background-color: #16a085;
+    background-color: #a1c0c6;
     box-shadow: none;
 }
 
@@ -104,14 +105,14 @@ input {
     background-color: #0B486B;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 8px;
+    border-radius: 15px;
     border: 0px;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 15px;
     box-shadow: 0 2.5px 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .mainButton:hover {
-    background-color: #16a085;
+    background-color: #a1c0c6;
     box-shadow: none;
   }
